# auto_watering_system

./: .gitignore  .gitmodules  README.md
Scale/: Makefile  i2c_callbacks.c  i2c_callbacks.h  main.c  scale_i2c.c  scale_i2c.h  scale_i2c_interface.h
Scale/test/: Makefile  README.md  platformio.ini  test_i2c_slave.ino
Scale/test/src/: Makefile  config.h  test_i2c_slave.ino
android/SimpleNFC2HTTP/: build.gradle  settings.gradle
android/SimpleNFC2HTTP/app/: build.gradle
android/SimpleNFC2HTTP/app/src/main/: AndroidManifest.xml
android/SimpleNFC2HTTP/app/src/main/java/com/skz81/simplenfc2http/: AppConfFragment.java  AppConfiguration.java  ConnectionManager.java  DebugTagInjector.java  FetchPlantInfo.java  JSONInfoAdapter.java  LocalDatabase.java  MainActivity.java  (+10 more)
android/SimpleNFC2HTTP/app/src/main/res/layout/: activity_main.xml  fragment_app_config.xml  fragment_scan_tags.xml  fragment_tab.xml  fragment_update.xml  fragment_write_tag.xml
android/SimpleNFC2HTTP/app/src/main/res/values/: strings.xml
android/SimpleNFC2HTTP/gradle/wrapper/: gradle-wrapper.properties
android/testserver/: database.db  deploy.sh
android/testserver/Scripts/: create_tag.py  draft.py  search_plant_id.py  update_plant.py
android/testserver/etc/lighttpd/: lighttpd.conf
esp32/proto_autowats_control_http/: ATWs_use_cases.md  ATWs_use_cases.txt  CMakeLists.txt  README.md  sdkconfig
esp32/proto_autowats_control_http/files/: index.html
esp32/proto_autowats_control_http/main/: CMakeLists.txt  Kconfig.projbuild  MCP23017.c  MCP23017.h  flowcounter.c  flowcounter.h  main.c
